<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    tools:context="com.example.tambolaGame.presentation.fragments.AddGamesFragment">

    <TextView
        android:id="@+id/no_added_games"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="15"
        android:text="@string/label_no_games"
        android:textSize="16sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addGames_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:nestedScrollingEnabled="false"
        tools:itemCount="18"
        tools:listitem="@layout/item_add_game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_new_games"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_add_games"
            android:text="@string/btn_text_add_new"/>

        <Button
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_game"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_server"
            android:text="@string/btn_text_build_server"/>

    </LinearLayout>

</LinearLayout>