<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:maxLines="1"
            android:maxLength="30"
            android:singleLine="true"
            android:hint="@string/hint_game_name"
            android:textSize="14sp"
            android:inputType="text"
            android:id="@+id/edit_gameName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_gamePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:maxLines="1"
            android:maxLength="7"
            android:hint="@string/hint_game_price"
            android:singleLine="true"
            android:inputType="number"
            android:textSize="14sp"
            android:id="@+id/edit_gamePrice" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_gameWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="30"
        android:singleLine="true"
        android:hint="@string/hint_game_winner"
        android:inputType="text"
        android:textSize="14sp"
        android:id="@+id/edit_gameWinner" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>